--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: "Montserrat", sans-serif;
     position: relative;
     padding-bottom: 100px;
+    box-sizing: border-box;
 
 
 }
@@ -57,6 +58,7 @@ video {
 
 .capa-descrição {
     color: white;
+    width: 353px;
 
 }
 .link-assistir {
